<package>
  <name>asio-serial-device</name>
  <version>1.0.0</version>
  <description>asio-serial-device</description>
  <maintainer email="nmichael@users.noreply.github.com">Nathan Michael</maintainer>

  <license>GPL</license>

  <url type="website">https://github.com/nmichael/asio-serial-device</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Nathan Michael</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


</package>