<package>
  <name>asio_serial_device</name>
  <version>1.0.0</version>
  <description>asio_serial_device</description>
  <maintainer email="nmichael@users.noreply.github.com">Nathan Michael</maintainer>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>GPL</license>

  <author>Nathan Michael</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
